--- a/learn-nodejs/binaracademy/8-registration-form-expressjs-ejs-part3/views/index.ejs
+++ b/learn-nodejs/binaracademy/8-registration-form-expressjs-ejs-part3/views/index.ejs
@@ -4,12 +4,60 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Upload an Image</h1>
-    <form action="/profile" method="POST" enctype="multipart/form-data">
-    <input type="file" name="image">
-    <button type="submit">Upload Image</button>
-    </form>
+    <div class="container">
+        <h1>Register</h1><br>
+        <form action="/profile" method="post" enctype="multipart/form-data">
+            <div class="row">
+                <div class="col-1">
+                    <label for="name">Name:</label>
+                </div>
+                <div class="col">
+                    <input type="text" id="name" name="name" required><br><br>
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-1">
+                    <label for="name">Job:</label>
+                </div>
+                <div class="col">
+                    <input type="text" id="job" name="job" required><br><br>
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-1">
+                    <label for="email">Email:</label>
+                </div>
+                <div class="col">
+                    <input type="email" id="email" name="email" required><br><br>
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-1">
+                    <label for="phone">Phone:</label>
+                </div>
+                <div class="col">
+                    <input type="text" id="phone" name="phone"><br><br>
+                </div>
+            </div>
+            
+            <div class="row">
+                <div class="col-1">
+                    <label for="image">Photo:</label>
+                </div>
+                <div class="col">
+                    <input type="file" id="image" name="image" required><br><br>
+                </div>
+            </div>
+            <input type="submit" value="Submit">
+        </form>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
 </html>
+
